src/objects/RatePeriodBean__mdt.object
<CustomObject>
    <fields>
        <fullName>ConfigTagId__c</fullName>
        <label>ConfigTagId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayValue__c</fullName>
        <label>DisplayValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IRatePeriod__c</fullName>
        <label>IRatePeriod</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDefault__c</fullName>
        <label>IsDefault</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsInternal__c</fullName>
        <label>IsInternal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LanguageCode__c</fullName>
        <label>LanguageCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RatePeriod__c</fullName>
        <label>RatePeriod</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShortDisplay__c</fullName>
        <label>ShortDisplay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RatePeriodBean</label>
    <pluralLabel>RatePeriodBean</pluralLabel>
</CustomObject>